@@ -109,6 +109,7 @@ https://github.com/elastic/beats/compare/v6.4.0...6.x[Check the HEAD diff]
 - Added the `add_process_metadata` processor to enrich events with process information. {pull}6789[6789]
 - Add Beats Central Management {pull}8559[8559]
 - Report configured queue type. {pull}8091[8091]
+- Enable `host` and `cloud` metadata processors by default. {pull}8596[8596]
 
 *Auditbeat*
 
